# squirrelfocus

./: .env.example  .gitignore  ADOPTERS.md  Agents.md  CHANGELOG.md  LICENSE  MILESTONE_LOG.md  README.md  README_SQF_CI.md  pyproject.toml  setup.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ai-build.yml  ci-summary.yml  ci.yml  codex.yml  merge-log.yml  release-publish.yml  sf-summary.yml
.squirrelfocus/: config.yaml
cli/: Agents.md  __init__.py  config.py
codex/goals/: expected_codex_behavior.md
codex/journal/: 2025-06-10.md
codex/prompts/: work_item_generator.md
docs/: TEMPLATE.md  backlog.md  cli_reference.md  corporate_review_checklist.md  security-overview.md  troubleshooting.md  vision.md
docs/integrations/: webhook_format.md
docs/reflections/: developer_journal.md
integrations/: Agents.md
journal_logs/: 2025-08-30-ci-fix.md
scripts/: install_hooks.ps1  install_hooks.sh  post_triage_comment.js  preflight_gh_auth.sh  setup_poetry.sh  sqf_emit.py
templates/: sqf_fix.md
tests/: test_cli.py  test_cli_config.py  test_cli_new.py  test_config.py  test_doctor.py  test_post_triage_comment.py  test_preview.py  test_report.py  test_sqf_emit.py
