[tool.poetry]
name = "squirrelfocus"
version = "0.2.0"
description = "Developer productivity and reflection toolkit."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.1.7,<8.2"
openai = "^1.14.1"
pyyaml = "^6.0.2"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = "^24.3.0"
ruff = "^0.4.0"
mypy = "^1.17.1"
pytest-cov = "^6.2.1"
types-pyyaml = "^6.0.12.20250822"

[tool.poetry.scripts]
sf = "cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["^tests/", "^scripts/", "^cli/__init__\\.py$"]

[[tool.mypy.overrides]]
module = "cli"
ignore_errors = true
